--- a/circle.yml
+++ b/circle.yml
@@ -3,4 +3,4 @@ machine:
     - docker
 test:
   override:
-    - docker run -it --rm -v $(pwd):/source -w /source scorpil/rust:1.21 cargo test
+    - docker run -it --rm -v $(pwd):/source -w /source scorpil/rust:nightly cargo test
