--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ image = "0.17.0"
 rand = "0.3.17"
 lalrpop-util = "0.13.1"
 regex = "0.2.1"
+lazy_static = "0.2.9"
 
 [dev-dependencies]
 stainless = "0.1.12"
