--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "rt-rs"
 version = "0.1.0"
 authors = ["Sean Kelley <seansfkelley@gmail.com>", "Kevin Verdieck <kevinverdieck@gmail.com>"]
 build = "build.rs"
+exclude = [ "/scenes/*", "/scripts/*", "out/*" ]
 
 [build-dependencies]
 lalrpop = "0.13.1"
