--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ lalrpop-util = "0.13.1"
 regex = "0.2.1"
 lazy_static = "0.2.9"
 terminal_size = "0.1.7"
+ordered-float = "0.5.0"
+lazysort = "0.2.0"
